# GAIM_Lab

./: .gitignore  README.md  batch_analysis.py  generate_dashboard.py  pyproject.toml  run_analysis_v2.py  run_batch_18.py  run_batch_agents.py  run_batch_v2.py  run_reliability_analysis.py  run_retest_largest.py  run_sample_analysis.py  run_single_largest.py  test1_result.json  test2_result.json  test_largest_result.json  test_largest_result_retest.json  test_result.json  test_retest_reliability.json
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  requirements-cloud.txt  requirements.txt  server.py
backend/app/: main.py  main_cloud.py
backend/tests/: conftest.py  pytest_output.txt  test_pedagogy_v8.py  test_security.py
config/: rubric_config.yaml
core/: config.py  database.py  growth_analyzer.py  paths.py
core/agents/: content_agent.py  orchestrator.py  pedagogy_agent.py
core/analyzers/: timelapse_analyzer.py
data/: gaim_lab.db  gaim_lab.db-shm  gaim_lab.db-wal  users.db
docs/: index.html  mas-dashboard.html  mas-index.html  mas-reliability.html  report_v2.html  styles.css
docs/app/: index.html
docs/video/: capture_screenshots.py  generate_images.py  images.txt  subtitles.srt
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/: manifest.json  service-worker.js
frontend/src/: App.css  App.jsx  apiConfig.js  index.css
output/: reliability_v6_v7.json
scripts/: batch_analysis_v2.py  reliability_analysis.py
scripts/analysis/: reaggregate_results.py  (+1 more)
tests/: test_pedagogy_v7.py
(+139 files in other folders)
